prover-ray/zkcdriver/testdata/synced/invalid/bitwise_03.zkc
//error:3:8-9:unexpected token
fn f(x:u8) -> (r:u8) {
  r = ~)
  return
}
